<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chaitanya.task2.MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Spider Induction 2016"
        android:id="@+id/header"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#aab0fb" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameet"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/header"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/header" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/rollet"
        android:layout_above="@+id/spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="54dp"
        android:layout_toEndOf="@+id/nametv" />

    <Spinner
        android:entries="CHEM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/rollet"
        android:spinnerMode="dropdown" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TRONICS"
        android:id="@+id/checkBox"

        android:layout_below="@+id/spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="31dp"
        android:layout_toEndOf="@+id/rolltv"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Web Dev"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="App Dev"
        android:id="@+id/checkBox3"
        android:layout_below="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_alignEnd="@+id/checkBox2" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mentor_switch"
        android:id="@+id/switch1"
        android:checked="false"
        android:layout_above="@+id/submitB"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submitB"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="intentthanks"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_student"
        android:id="@+id/nametv"
        android:layout_alignTop="@+id/nameet"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/roll_no"
        android:id="@+id/rolltv"
        android:layout_alignTop="@+id/rollet"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dept_droplist"
        android:id="@+id/depttv"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_tv"
        android:id="@+id/profiletv"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Algos"
        android:id="@+id/checkBox4"
        android:layout_below="@+id/checkBox3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:checked="false" />

</RelativeLayout>
